[SYNCOPE-1876] Remove Virtual Attributes